# traffic-signal-openenv

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  session.md  validate-submission.sh
app/: __init__.py  config.py  main.py  models.py
assets/: blog_draft.md  video_script.md
env/: __init__.py  metrics_exporter.py  traffic_env.py  types.py
graders/: __init__.py  common.py  grader.py  grader_easy.py  grader_hard.py  grader_medium.py
metrics/: easy_fixed_log.json  easy_fixed_metrics.csv  easy_fixed_policy.csv  easy_fixed_queues.csv
notebooks/: train_colab.ipynb  train_colab_FULL.ipynb  train_colab_SMOKE.ipynb
scripts/: demo_compare.py  pause_space.py  upload_to_space.py
server/: app.py
sumo/: config.sumo.cfg  net.xml  route.xml
tasks/: __init__.py  task_corridor.py  task_dynamic.py  task_easy.py  task_gridlock.py  task_hard.py  task_incident.py  task_medium.py
tests/: test_env.py  test_extended.py
training/: train.py
